Make sure one base class does not use another one after destruction

see 706ac4779de1870cf0d922f1cc3f6d4470392403 and fdo#47589